--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,8 @@
   "semi": true,
   "singleQuote": true,
   "trailingComma": "all",
-  "printWidth": 80
+  "printWidth": 80,
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindStylesheet": "./src/input.css",
+  "tailwindConfig": "./tailwind.config.js"
 }
