--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "tailwind": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "lucide-react": "^0.475.0",
-    "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.14",
     "yup": "^1.6.1"
